Map figma to CSS #6

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,10 @@
     "storage",
     "activeTab"
   ],
-  "options_page": "options.html",
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": false
+  },
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Silly Goose",
