--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@google-cloud/language": "^4.2.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-functions": "^3.11.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
